--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "jest": "^27.3.0",
+    "jest": "^27.3.1",
     "supertest": "^6.1.6"
   },
   "devDependencies": {},
@@ -14,7 +14,7 @@
     "start": "node index.js",
     "test": "jest --verbose --coverage --watch",
     "test:watch": "jest --watch"
-    },
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gmeadiv/server-deployment-practice.git"
@@ -25,5 +25,8 @@
   "bugs": {
     "url": "https://github.com/gmeadiv/server-deployment-practice/issues"
   },
-  "homepage": "https://github.com/gmeadiv/server-deployment-practice#readme"
+  "homepage": "https://github.com/gmeadiv/server-deployment-practice#readme",
+  "directories": {
+    "lib": "lib"
+  }
 }
